--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <!-- Navigation Bar -->
      <nav class="navbar">
         <div class="logo">
+            <img src="ChatGPT Image May 6, 2025, 10_58_51 AM.png" alt="NOVANEX Logo" class="nav-logo">
             <h1>NOVANEX</h1>
         </div>
         
@@ -85,6 +86,19 @@
                 <a href="#" class="btn">Pre-order Now</a>
             </div>
         </section>
+
+        <section class="signup-section">
+            <div class="signup-form">
+              <img src="ChatGPT Image May 6, 2025, 10_58_51 AM.png" alt="NOVANEX Logo" class="form-logo">
+              <h2>Join the Revolution</h2>
+              <form>
+                <input type="text" placeholder="Full Name" required>
+                <input type="email" placeholder="Email" required>
+                <input type="password" placeholder="Password" required>
+                <button type="submit" class="btn">Sign Up</button>
+              </form>
+            </div>
+          </section>
 
          <!-- Footer -->
     <footer>
