index.html and style.css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,23 @@
             <a href="#features" class="btn">Explore Features</a>
         </div>
     </section>
+    
 
+    <!-- Latest Products -->
+    <section id="latest" class="products-section">
+        <h2 class="section-title">Latest Products</h2>
+        <div class="products-grid">
+            <!-- Products will be added by JavaScript -->
+        </div>
+    </section>
+
+    <!-- Featured Products -->
+    <section id="featured" class="products-section">
+        <h2 class="section-title">Featured Products</h2>
+        <div class="products-grid">
+            <!-- Products will be added by JavaScript -->
+        </div>
+    </section>
 
         <!-- === PRODUCT SPOTLIGHT === -->
         <section class="product-spotlight">
@@ -99,6 +115,48 @@
               </form>
             </div>
           </section>
+
+
+          <!-- Testimonials -->
+    <section id="testimonials" class="testimonials">
+        <h2 class="section-title">What Our Customers Say</h2>
+        <div class="testimonial-grid">
+            <div class="testimonial-card">
+                <div class="rating">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <p>"The best earbuds I've ever used! The noise cancellation is incredible."</p>
+                <h4>- Alex Johnson</h4>
+            </div>
+            <!-- More testimonials will be added by JavaScript -->
+        </div>
+    </section>
+
+          <!-- Contact Section -->
+    <section id="contact" class="contact">
+        <h2 class="section-title">Contact Us</h2>
+        <div class="contact-container">
+            <div class="contact-info">
+                <h3>Get in Touch</h3>
+                <p><i class="fas fa-envelope"></i> <a href="mailto:contact@novanex.com">contact@novanex.com</a></p>
+                <p><i class="fas fa-phone"></i> <a href="tel:+18005551234">+1 (800) 555-1234</a></p>
+                <p><i class="fas fa-map-marker-alt"></i> <a href="https://www.google.com/maps?q=123+Akoka,+Yaba+City" target="_blank" rel="noopener noreferrer">123 Akoka, Yaba City</a></p>
+                <p><i class="fas fa-clock"></i> Mon - Fri: 9 AM - 6 PM</p>
+            </div>
+            <form class="contact-form">
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </div>
+    </section>
+
+
 
          <!-- Footer -->
     <footer>
